crates/toml_edit/tests/fixtures/invalid/integer/trailing-us.stderr
TOML parse error at line 1, column 19
  |
1 | trailing-us = 123_
  |                   ^
Invalid integer
Expected digit
